Add keyword "mar-quee" to bower.json

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
   "main": "mar-quee.html",
   "keywords": [
     "web-components",
-    "marquee"
+    "marquee",
+    "mar-quee"
   ],
   "authors": [
     "yutori"
